# diomanim

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASE1_ROADMAP.md  PHASE2_ROADMAP.md  README.md  TRANSFORM_BUG_FIX_PLAN.md  build.sh  render_examples.sh  styles.css
examples/: all_shapes_demo.rs  animation_test.rs  benchmark.rs  bubble_sort.rs  builder_api_demo.rs  clean_showcase.rs  comprehensive_demo.rs  euler_identity.rs  fibonacci_spiral.rs  final_showcase.rs  glyph_test.rs  gradient_descent.rs  gradient_descent_quick.rs  gradient_descent_video.rs  math_demo.rs  phase2_demo.rs  preview_demo.rs  pro_showcase.rs  rainbow.rs  rose_curve.rs  showcase.rs  showcase_frame.rs  simple_circle.rs  simple_shapes_test.rs  simple_showcase.rs  text_demo.rs  ultra_simple_showcase.rs  video_export_demo.rs  visual_test.rs  wave_propagation.rs
src/: lib.rs  main.rs
src/animation/: easing.rs  effects.rs  mod.rs  property.rs
src/core/: camera.rs  color.rs  config.rs  mod.rs  scene.rs  time.rs  transform.rs  vector.rs
src/export/: mod.rs
src/math/: expression.rs  layout.rs  mod.rs
src/mobjects/: mod.rs
src/preview/: mod.rs
src/render/: mod.rs  shapes.wgsl  text.wgsl  uniforms.wgsl
src/render/shaders/: transform.wgsl
src/scene/: builder.rs  mod.rs
src/text/: font.rs  mod.rs  rasterizer.rs
